# PyKantorovich

./: .readthedocs.yml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_html/.doctrees/: environment.pickle  index.doctree
pykantorovich/: __init__.py  kantorovich.py
tests/: test_pykantorovich.py
